backend_deploy.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app-backend
  labels:
    app: social-network
spec:
  containers:
    - name: backend
      image: httpd:2.4
      ports:
        - containerPort: 80
