nginx_deploy.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mon-site-web
  labels:
    app: website
    env: production
spec:
  containers:
    - name: nginx
      image: nginx:1.25
      ports:
        - containerPort: 80
      resources:
        requests:
          memory: "64Mi"
          cpu: "250m"
        limits:
          memory: "128Mi"
          cpu: "500m"
