persistente_bd.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-pod
spec:
  containers:
    - name: mysql
      image: mysql:8.0
      volumeMounts:
        - name: mysql-vol
          mountPath: /var/lib/mysql
  volumes:
    - name: mysql-vol
      persistentVolumeClaim:
        claimName: mysql-pvc
